--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     },
     {
         "key": "c_user",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     },
     {
         "key": "xs",
@@ -77,34 +77,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     },
     {
         "key": "fr",
-        "value": "0NVQGY6XuM25wueL7.AWcoFNyg1yi3iJQRcL6CjbtebGmOmVG41_bSb-OiolzFt4DGb3A.BoMGsK..AAA.0.0.BoQaYl.AWecxJ6j91DISTjwi_Sb7kVpvkc",
+        "value": "0NVQGY6XuM25wueL7.AWdSVr8IoD6izd1Ws1LUuJPTLBf-yltCFIX2xPKut11VXXYbpnI.BoMGsK..AAA.0.0.BoQeda.AWd2MbPNEnf4qPUqOLNawkV7WmM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     },
     {
         "key": "fbl_st",
-        "value": "101221983%3BT%3A29152213",
+        "value": "101229247%3BT%3A29152492",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749132837%3BCRCM%3A494329633",
+        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749149530%3BCRCM%3A1705019272",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:14:18.321Z",
-        "lastAccessed": "2025-06-05T14:14:18.321Z"
+        "creation": "2025-06-05T18:52:24.306Z",
+        "lastAccessed": "2025-06-05T18:52:24.306Z"
     }
 ]
