--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100066401546757%22%3A%22xgeXN4fo%22%2C%22100091651584568%22%3A%22y0zmdsUk%22%7D",
+        "value": "%7B%22100066401546757%22%3A%22xgeXN4fo%22%2C%22100091651584568%22%3A%2207XOeeDk%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.4875000715255737",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
+    },
+    {
+        "key": "wd",
+        "value": "485x1076",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     },
     {
         "key": "c_user",
@@ -68,43 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     },
     {
         "key": "xs",
-        "value": "44%3AJIjSVl1Nvmd0Wg%3A2%3A1748958680%3A-1%3A-1",
+        "value": "38%3AXHZqsGXG0xkr7g%3A2%3A1749193502%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     },
     {
         "key": "fr",
-        "value": "0NVQGY6XuM25wueL7.AWdSVr8IoD6izd1Ws1LUuJPTLBf-yltCFIX2xPKut11VXXYbpnI.BoMGsK..AAA.0.0.BoQeda.AWd2MbPNEnf4qPUqOLNawkV7WmM",
+        "value": "0NVQGY6XuM25wueL7.AWdCcLSgc-7lwFRXTHpEA4wENM0RC4X4awhOWW2MUYhPw52ywyQ.BoMGsK..AAA.0.0.BoQpMg.AWdCfCMgsf6OVZ1hCO_HGOaiFe8",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     },
     {
         "key": "fbl_st",
-        "value": "101229247%3BT%3A29152492",
+        "value": "100731956%3BT%3A29153225",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749149530%3BCRCM%3A1705019272",
+        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749193504%3BCRCM%3A1655626384",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T19:04:18.551Z",
-        "lastAccessed": "2025-06-05T19:04:18.551Z"
+        "creation": "2025-06-06T07:05:17.419Z",
+        "lastAccessed": "2025-06-06T07:05:17.419Z"
     }
 ]
